--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
 version: "3"
+#version of the docker compose
 services:
   app:
-    image: attendance_image 
+    image: amershl/attendance-project:latest
     links: 
       - db
+#port forwarding 
     ports:
       - "5000:5000"
   db:
@@ -11,6 +13,7 @@ services:
      ports: 
        - "3306:3306"
      environment:
-       MYSQL_ROOT_PASSWORD: "amershala"       
+#my user is : root
+       MYSQL_ROOT_PASSWORD: "${PASSWORD_MYSQL}"       
      volumes: 
        - ./db:/docker-entrypoint-initdb.d/:ro  
