--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-flask
-pandas
-mysql-connector-python
-pysftp
-python-dotenv
+flask==2.0.1
+
+
+pandas==1.3.5
+
+mysql-connector-python==8.0.15
+
+pysftp==0.2.9
+
+python-dotenv==0.19.2
+
